# GetechRecorder

./: private_key.pem  pyproject.toml
scripts/: start.sh
src/pfa/: cryption.py  db.py  main.py  some.py
