[tool.poetry]
name = "getechserver"
version = "0.0.1"
description = "A server just for development"
authors = ["Alsefum"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
cryptography = "^44.0.2"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
